--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
-    <img src="img/cover.jpg" class="img-responsive">
-
+    <div class="container">
+      <div class="img-strip"></div>
+    </div>
   </body>
 </html>
