fiddling with text placement WIP

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <div class="container">
-      <div class="img-strip"></div>
+      <div class="img-strip">
+        <h1><a href="http://www.lgtrproductions.com/">Director</a> | Stylist</h1>
+      </div>
     </div>
   </body>
 </html>
