--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <div class="img-strip">
-        <h1><a href="http://www.lgtrproductions.com/">Director</a> | Stylist</h1>
+        <h1><a href="http://lgtrproductions.com/">Director</a> | Stylist</h1>
       </div>
     </div>
   </body>
