update website yay

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Patrice Lighter - Coming Soon</title>
+    <title>Patrice Lighter - Director | Stylist</title>
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
       <div class="img-strip">
-        <h1><a href="http://www.lgtrproductions.com/">Director</a> | Stylist</h1>
+        <h1><a href="http://www.lgtrproductions.com/">Director</a> | <a href="http://shesalltiedup.tumblr.com/">Stylist</a></h1>
       </div>
     </div>
   </body>
